--- a/framework_calibrating_ecosystem_models.tex
+++ b/framework_calibrating_ecosystem_models.tex
@@ -129,55 +129,15 @@ If we consider discretizing at constant time steps $\Delta t$ then since the sys
 
 % Bayesian Calibration 
 \section{Bayesian Calibration}
-
-% Emulator-Based Calibration for Dynamic Models
-\section{Emulator-Based Calibration for Dynamic Models}
-
-\subsection{Basis Functions}
-
-\subsection{Likelihood and Loss Emulation}
-In this section we describe the emulator used to approximate the true log likelihood $\llik(\bpar)$. The log likelihood can be written as 
-\begin{align*}
-\llik(\bpar) &= \sum_{\outidx = 1}^{\Nout} \sum_{\timeidx = 1}^{\Ntime_{\outidx}} \log \mathcal{N}\left(\state_{\timeidx \outidx}| \fwd_{\timeidx \outidx}(\bpar), \sdOut_{\outidx}^2 \right) \\
-	         &= \sum_{\outidx = 1}^{\Nout}  \sum_{\timeidx = 1}^{\Ntime_{\outidx}} \left[-\frac{1}{2} \log(2\postDens \sdOut_{\outidx}^2) - \frac{1}{2\sdOut_{\outidx}^2} (\state_{\timeidx \outidx} - \fwd_{\timeidx \outidx}(\bpar))^2\right]  \\
-	         &= -\frac{1}{2} \sum_{\outidx = 1}^{\Nout} \left[\Ntime_{\outidx} \log\left(2\postDens \sdOut_{\outidx}^2 \right) + \frac{1}{\sdOut_{\outidx}^2}\sum_{\timeidx = 1}^{\Ntime_{\outidx}} \left(\state_{\timeidx \outidx} - 
-	                \fwd_{\timeidx \outidx}(\bpar)\right)^2  \right] \\
-	         &= -\frac{1}{2} \sum_{\outidx = 1}^{\Nout} \left[\Ntime_{\outidx} \log\left(2\postDens \sdOut_{\outidx}^2 \right) + \frac{\SSROut(\bpar)}{\sdOut_{\outidx}^2} \right] 
-\end{align*}
-where 
-\[\SSROut(\bpar) := \sum_{\timeidx = 1}^{\Ntime_{\outidx}} (\state_{\timeidx \outidx} - \fwd_{\timeidx \outidx}(\bpar))^2\]
-is the sum of squared errors between the observed data and the model output for the $\outidx^{\text{th}}$ output variable. Note that $\SSROut(\bpar)$ also depends on $\stateMat$, but again we suppress this in the notation. The key observation 
-is that the model evaluations $\fwd(\bpar)$ only appear in the likelihood through the $\SSROut(\bpar)$, which means that approximating $\SSROut(\bpar)$ will induce an approximation of the likelihood. The independence assumptions 
-that yield the product form of the likelihood make it so that $\SSR(\bpar)$ is a sufficient statistic which is not a function of the variance parameters. This means that $\SSR(\bpar)$ can be emulated without regard for the variance parameters, 
-and then inference can be performed over the variance parameters as usual. The choice to emulate the mappings $\SSROut: \parspace \to \R$ also reduces the problem to 
-approximating $\Nout$ univariate functions, instead of approximating $\fwd(\bpar)$, which has output dimension $\Ntime \times \Nout$. On a notational note, we collect the $\SSROut(\bpar)$ values into a $\Nout$-dimensional 
-vector $\SSR := \begin{pmatrix} \SSR^{(1)}(\bpar), \dots, \SSR^{(\Nout)}(\bpar) \end{pmatrix}^\top$.  
-
-Our emulator of choice uses Gaussian processes (GP). In particular, we treat the $\SSROut$ as unknown and assign them independent GP priors
-
-\[\SSROut(\cdot) \overset{\text{ind}}{\sim} \GP(\GPMeanOut(\cdot), \GPKerOut(\cdot, \cdot))\] 
-
-where $\GPMeanOut: \Omega \to \R$ and $\GPKerOut: \Omega \times \Omega \to \R_+$ are the mean and covariance function (i.e. kernel), respectively. 
-Suppose we have access to a dataset 
-\[\designData_{\Ndesign} = \left\{(\bpar_1, \SSR(\bpar_1)), \dots, (\bpar_{\Ndesign}, \SSR(\bpar_{\Ndesign})) \right\}\]
-consisting of a set of $\Ndesign$ values for the calibration parameter and their associated values of $\SSR$ resulting from full forward model evaluations. For brevity, we will henceforth denote 
-$\SSR_{\designidx} := \SSR(\bpar_{\designidx})$. 
-
-We then run the forward model at carefully selected \textit{design points} $\bpar_1, \dots, \bpar_N \in \parspace$ and compute $\{\SSROut(\bpar_{\designidx})\}_{1 \leq \outidx \leq \Nout, 1 \leq \designidx \leq \Ndesign}$. 
-
-We denote the resulting observed data for output $p$ as 
-$\mathcal{D}_p := \left\{(\bpar_1, \Phi_1(\bpar_1)), \dots, (\bpar_P, \Phi_p(\bpar_P))  \right\}$ and collect the observed outputs in a vector 
-$\boldsymbol{\phi}_p = \left[\Phi_1(\bpar_1), \dots, \Phi_P(\bpar_1) \right]^{\top}$. Conditioning the GPs on the observed data yields the GP predictive distributions 
-\[\Phi_p(\cdot)|\mathcal{D}_p := \Phi_p^*(\cdot) \sim \mathcal{GP}(\mu^*_p(\cdot), k_p^*(\cdot, \cdot)), \text{ for } p = 1, \dots, P\]
+In this section we provide a brief overview of the Bayesian approach to computer model calibration, which has been recently favored by researchers due to its ability to quantify 
+uncertainties in the calibration process. We begin by defining a likelihood function $p(\stateMat|\bpar)$ that relates the observed field data $\stateMat$ to the forward model prediction 
+$\fwd(\bpar)$. Throughout most of this article, we assume the following Gaussian likelihood 
+\begin{align}
+\bstateOut{\outidx}, \CovObs | \bpar \overset{\text{ind}}{\sim} \mathcal{N}_{\Ntime_{\outidx}}(\fwd_{\outidx}(\bpar), \sdOut_{\outidx}^2 I)
+\end{align}
 
 
 
-\subsection{Statistical Setting}
-We denote the vector of calibration parameters by $\bpar \in \parspace \subset \R^{\Npar}$. The forward model (e.g. SIPNET or ED2) $\fwd(\bpar)$ maps calibration parameters to the model outputs. Note that the forward 
-model also depends on initial conditions and model drivers, but these are fixed throughout the analysis so are suppressed in the notation. Model outputs consist 
-of $T$ time steps for each of $P$ output variables, so $\fwd(\bpar) \in \mathbb{R}^{\Ntime \times \Nout}$. We have observed data $Y \in \mathbb{R}^{\Ntime \times \Nout}$, potentially with missing values. Let $\Ntime_{\outidx}$ denote the number 
-of non-missing observations of output variable $p$. We index the observations of output $p$ as $\{y_{tp}\}_{\timeidx = 1}^{\Ntime_{\outidx}}$, meaning that $Y$ is then technically a ragged matrix. 
-This is suitable for the model detailed below, as the ordering of the observations is inconsequential. 
 
 To measure error between model 
 predictions $\fwd(\bpar)$ and observed data $Y$, we assume the following Gaussian noise model. 
@@ -193,6 +153,62 @@ The variances $\sigma_p^2$ are assigned inverse gamma priors $\sigma_p^2 \overse
 \[\priorDens(\Sigma) = \prod_{p = 1}^{P} \mathcal{IG}(\sigma_p^2|\alpha_p, \beta_p)\]
 Combining these priors with the likelihood yields the posterior 
 \[\postDens(\bpar, \Sigma) := p(\bpar, \sigma_1^2, \dots, \sigma_P^2|Y) \propto e^{\llik(\bpar)}\priorDens(\bpar, \Sigma)\]
+
+
+% Emulator-Based Calibration for Dynamic Models
+\section{Emulator-Based Calibration for Dynamic Models}
+
+\subsection{Basis Functions}
+
+\subsection{Likelihood and Loss Emulation}
+\textbf{TODO: better to introduce all the GP notation in the $P = 1$ case to avoid all the superscripts. Then generalize later.}
+
+In this section we describe the emulator used to approximate the true log likelihood $\llik(\bpar)$. The log likelihood can be written as 
+\begin{align*}
+\llik(\bpar) &= \sum_{\outidx = 1}^{\Nout} \sum_{\timeidx = 1}^{\Ntime_{\outidx}} \log \mathcal{N}\left(\state_{\timeidx \outidx}| \fwd_{\timeidx \outidx}(\bpar), \sdOut_{\outidx}^2 \right) \\
+	         &= \sum_{\outidx = 1}^{\Nout}  \sum_{\timeidx = 1}^{\Ntime_{\outidx}} \left[-\frac{1}{2} \log(2\postDens \sdOut_{\outidx}^2) - \frac{1}{2\sdOut_{\outidx}^2} (\state_{\timeidx \outidx} - \fwd_{\timeidx \outidx}(\bpar))^2\right]  \\
+	         &= -\frac{1}{2} \sum_{\outidx = 1}^{\Nout} \left[\Ntime_{\outidx} \log\left(2\postDens \sdOut_{\outidx}^2 \right) + \frac{1}{\sdOut_{\outidx}^2}\sum_{\timeidx = 1}^{\Ntime_{\outidx}} \left(\state_{\timeidx \outidx} - 
+	                \fwd_{\timeidx \outidx}(\bpar)\right)^2  \right] \\
+	         &= -\frac{1}{2} \sum_{\outidx = 1}^{\Nout} \left[\Ntime_{\outidx} \log\left(2\postDens \sdOut_{\outidx}^2 \right) + \frac{\SSROut{\outidx}(\bpar)}{\sdOut_{\outidx}^2} \right] 
+\end{align*}
+where 
+\[\SSROut{\outidx}(\bpar) := \sum_{\timeidx = 1}^{\Ntime_{\outidx}} (\state_{\timeidx \outidx} - \fwd_{\timeidx \outidx}(\bpar))^2\]
+is the sum of squared errors between the observed data and the model output for the $\outidx^{\text{th}}$ output variable. Note that $\SSROut{\outidx}(\bpar)$ also depends on $\stateMat$, but again we suppress this in the notation. The key observation 
+is that the model evaluations $\fwd(\bpar)$ only appear in the likelihood through the $\SSROut{\outidx}(\bpar)$, which means that approximating $\SSROut{\outidx}(\bpar)$ will induce an approximation of the likelihood. The independence assumptions 
+that yield the product form of the likelihood make it so that $\SSR(\bpar)$ is a sufficient statistic which is not a function of the variance parameters. This means that $\SSR(\bpar)$ can be emulated without regard for the variance parameters, 
+and then inference can be performed over the variance parameters as usual. The choice to emulate the mappings $\SSROut{\outidx}: \parspace \to \R$ also reduces the problem to 
+approximating $\Nout$ univariate functions, instead of approximating $\fwd(\bpar)$, which has output dimension $\Ntime \times \Nout$. On a notational note, we collect the $\SSROut{\outidx}(\bpar)$ values into a $\Nout$-dimensional 
+vector $\SSR := \begin{pmatrix} \SSROut{1}(\bpar), \dots, \SSROut{\Nout}(\bpar) \end{pmatrix}^\top$.  
+
+Our emulator of choice uses Gaussian processes (GP). In particular, we treat the $\SSROut{\outidx}$ as unknown and assign them independent GP priors
+
+\[\SSROut{\outidx}(\cdot) \overset{\text{ind}}{\sim} \GP(\GPMeanOut{\outidx}(\cdot), \GPKerOut{\outidx}(\cdot, \cdot))\] 
+
+where $\GPMeanOut{\outidx}: \parspace \to \R$ and $\GPKerOut{\outidx}: \parspace \times \parspace \to \R_+$ are the mean and covariance function (i.e. kernel), respectively. 
+Suppose we have access to observed data 
+\[\designData_{\Ndesign} = \left\{(\bpar_1, \SSR(\bpar_1)), \dots, (\bpar_{\Ndesign}, \SSR(\bpar_{\Ndesign})) \right\}\]
+consisting of a set of $\Ndesign$ values for the calibration parameter and their associated values of $\SSR$ resulting from full forward model evaluations. For brevity, we will henceforth denote 
+$\SSR_{\designidx} := \SSR(\bpar_{\designidx})$. Conditioning the GPs on the observed data yields the GP predictive distributions
+\begin{align} 
+\SSRPredOut{\Ndesign}{\outidx}(\cdot) := \SSROut{\outidx}(\cdot)|\designData_{\Ndesign} \overset{\text{ind}}{\sim} \GP(\GPMeanPredOut{\Ndesign}{\outidx}(\cdot), \GPKerPredOut{\Ndesign}{\outidx}(\cdot, \cdot)), \text{ for } \outidx = 1, \dots, \Nout
+\end{align}
+where 
+\begin{align}
+\GPMeanPredOut{\Ndesign}{\outidx}(\bpar) &= \GPMeanOut{\outidx}(\bpar) + \left(\boldsymbol{\GPKerOut{\outidx}_{\bpar}}\right)^\top \KerMat{\Ndesign}^{-1} (\SSRVecPredOut{\Ndesign}{\outidx} - \GPMeanOut{\outidx}(\bpar) \oneVec{\Ndesign}) \\ 
+\GPKerPredOut{\Ndesign}{\outidx}(\bpar) &= \GPKerOut{\outidx}(\bpar) - \left(\boldsymbol{\GPKerOut{\outidx}_{\bpar}}\right)^\top \KerMat{\Ndesign}^{-1} \boldsymbol{\GPKerOut{\outidx}_{\bpar}}
+\end{align}
+Here we have defined 
+\begin{align}
+\boldsymbol{\GPKerOut{\outidx}_{\bpar}} &:= \begin{pmatrix} \GPKerOut{\outidx}(\bpar_1, \bpar), \dots, \GPKerOut{\outidx}(\bpar_{\Ndesign}, \bpar)  \end{pmatrix}^\top \\ 
+\SSRVecPredOut{\Ndesign}{\outidx} &:= \begin{pmatrix} \SSRPredOut{1}{\outidx}, \dots, \SSRPredOut{\Ndesign}{\outidx} \end{pmatrix}^{\top}
+\end{align}
+
+\subsection{Statistical Setting}
+We denote the vector of calibration parameters by $\bpar \in \parspace \subset \R^{\Npar}$. The forward model (e.g. SIPNET or ED2) $\fwd(\bpar)$ maps calibration parameters to the model outputs. Note that the forward 
+model also depends on initial conditions and model drivers, but these are fixed throughout the analysis so are suppressed in the notation. Model outputs consist 
+of $T$ time steps for each of $P$ output variables, so $\fwd(\bpar) \in \mathbb{R}^{\Ntime \times \Nout}$. We have observed data $Y \in \mathbb{R}^{\Ntime \times \Nout}$, potentially with missing values. Let $\Ntime_{\outidx}$ denote the number 
+of non-missing observations of output variable $p$. We index the observations of output $p$ as $\{y_{tp}\}_{\timeidx = 1}^{\Ntime_{\outidx}}$, meaning that $Y$ is then technically a ragged matrix. 
+This is suitable for the model detailed below, as the ordering of the observations is inconsequential. 
 
 \subsubsection{Conditional Posteriors}
 
