--- a/framework_calibrating_ecosystem_models.tex
+++ b/framework_calibrating_ecosystem_models.tex
@@ -129,37 +129,116 @@ If we consider discretizing at constant time steps $\Delta t$ then since the sys
 
 % Bayesian Calibration 
 \section{Bayesian Calibration}
+
+\subsection{Problem Setup}
 In this section we provide a brief overview of the Bayesian approach to computer model calibration, which has been recently favored by researchers due to its ability to quantify 
 uncertainties in the calibration process. We begin by defining a likelihood function $p(\stateMat|\bpar)$ that relates the observed field data $\stateMat$ to the forward model prediction 
 $\fwd(\bpar)$. Throughout most of this article, we assume the following Gaussian likelihood 
 \begin{align}
-\bstateOut{\outidx}, \CovObs | \bpar \overset{\text{ind}}{\sim} \mathcal{N}_{\Ntime_{\outidx}}(\fwd_{\outidx}(\bpar), \sdOut_{\outidx}^2 I)
+\stateOut{\outidx}, \CovObs | \bpar \overset{\text{ind}}{\sim} \mathcal{N}_{\Ntime_{\outidx}}(\fwdOut{\outidx}(\bpar), \sdOut_{\outidx}^2 I) \label{likelihood}
+\end{align}
+For notational convenience, we have collected the 
+variance parameters in the matrix $\CovObs := \text{diag}\left(\sdOut_1^2, \dots, \sdOut_{\Nout}^2 \right)$. 
+This likelihood assumes the errors are independent across time and output variable. 
+We will typically work with the log of the likelihood, denoted by 
+$\llik(\bpar, \CovObs) := \log p(\stateMat|\bpar, \CovObs)$. Note that $\llik(\bpar, \CovObs)$ depends on the data $\stateMat$, 
+but $\stateMat$ is constant throughout the analysis so we drop it from the notation.
+Under the likelihood \ref{likelihood}, $\llik(\bpar, \CovObs)$ takes the form 
+\begin{align*}
+\llik(\bpar, \CovObs) &= \sum_{\outidx = 1}^{\Nout} \sum_{\timeidx = 1}^{\Ntime_{\outidx}} \log \mathcal{N}\left(\stateTimeOut{\timeidx}{\outidx} | \fwdTimeOut{\timeidx}{\outidx}(\bpar), \sdOut_{\outidx}^2 \right)
+\end{align*}
+Missing observations are simply ignored. For future purposes, it will be useful to expand this sum of Gaussian densities and introduce some notation. To this end, the log likelihood can be written as 
+\begin{align*}
+\llik(\bpar, \CovObs) &= \sum_{\outidx = 1}^{\Nout} \sum_{\timeidx = 1}^{\Ntime_{\outidx}} \log \mathcal{N}\left(\state_{\timeidx \outidx}| \fwd_{\timeidx \outidx}(\bpar), \sdOut_{\outidx}^2 \right) \\
+	         &= \sum_{\outidx = 1}^{\Nout}  \sum_{\timeidx = 1}^{\Ntime_{\outidx}} \left[-\frac{1}{2} \log(2\postDens \sdOut_{\outidx}^2) - \frac{1}{2\sdOut_{\outidx}^2} (\state_{\timeidx \outidx} - \fwd_{\timeidx \outidx}(\bpar))^2\right]  \\
+	         &= -\frac{1}{2} \sum_{\outidx = 1}^{\Nout} \left[\Ntime_{\outidx} \log\left(2\postDens \sdOut_{\outidx}^2 \right) + \frac{1}{\sdOut_{\outidx}^2}\sum_{\timeidx = 1}^{\Ntime_{\outidx}} \left(\state_{\timeidx \outidx} - 
+	                \fwd_{\timeidx \outidx}(\bpar)\right)^2  \right] \\
+	         &= -\frac{1}{2} \sum_{\outidx = 1}^{\Nout} \left[\Ntime_{\outidx} \log\left(2\postDens \sdOut_{\outidx}^2 \right) + \frac{\SSROut{\outidx}(\bpar)}{\sdOut_{\outidx}^2} \right] 
+\end{align*}
+where 
+\begin{align}
+\SSROut{\outidx}(\bpar) := \sum_{\timeidx = 1}^{\Ntime_{\outidx}} (\state_{\timeidx \outidx} - \fwd_{\timeidx \outidx}(\bpar))^2
+\end{align}
+is the squared Euclidean error between the observations $\stateOut{\outidx}$ and computer model predictions $\fwdOut{\outidx}(\bpar)$ for the $\outidx^{\text{th}}$ data constraint. 
+
+With the likelihood established, we now define a prior distribution jointly over the calibration parameters $\btheta$ and likelihood variance parameters $\CovObs$. 
+We denote the prior density for this distribution as $\priorDens(\bpar, \CovObs) = \priorDens(\bpar)\priorDens(\CovObs)$, assuming prior independence between $\bpar$ and $\CovObs$.  
+The variances $\sdOut_{\outidx}^2$ are assigned inverse gamma priors $\sdOut_{\outidx}^2 \overset{ind}{\sim} \mathcal{IG}(\alpha_p, \beta_p)$ so that 
+\[\priorDens(\CovObs) = \prod_{\outidx = 1}^{\Nout} \mathcal{IG}(\sdOut_{\outidx}^2|\alpha_p, \beta_p).\]
+Combining these priors with the likelihood yields the posterior 
+\begin{align}
+\postDens(\bpar, \CovObs) := p(\bpar, \sdOut_{1}^2, \dots, \sdOut_{\Nout}^2|\stateMat) \propto \exp\left(\llik(\bpar, \CovObs)\right)\priorDens(\bpar, \CovObs).
+\end{align}
+Our main focus is on calibrating $\bpar$, while $\CovObs$ primarily act as nuisance parameters. Therefore, the primary object of interest is the marginal posterior
+\begin{align*}
+\postDens(\bpar|\stateMat) &= \int \postDens(\bpar, \CovObs|\stateMat) d\CovObs 
+\end{align*}
+The above marginalization over $\CovObs$ can be performed by drawing samples from the joint posterior and then extracting the $\bpar$ component of the samples. A 
+Markov Chain Monte Carlo (MCMC) algorithm for drawing such samples is detailed below.  
+
+\subsection{Posterior Sampling}
+The likelihood and prior assumptions specified above yield a convenient form of the posterior density which can be sampled using a Metropolis-within-Gibbs procedure, which samples in an 
+alternating fashion from the conditional posteriors $\postDens(\bpar|\stateMat, \CovObs)$ and $\postDens(\CovObs|\stateMat, \bpar)$. While the former conditional requires a Metropolis 
+accept-reject step, the latter is conditionally conjugate and hence can easily be sampled from. These (log) conditional posterior densities are provided below, with derivations detailed in 
+the appendix. When dealing with log densities, we use the proportionality sign ``$\propto$'' to indicate that additive constants have been dropped. 
+
+\bigskip
+\noindent
+\textbf{$\bpar$ conditional.} \textbf{TODO}
+
+\bigskip
+\noindent
+\textbf{$\CovObs$ conditional.}
+The log posterior of $\CovObs$ given $\bpar$ is given by 
+\begin{align*}
+\log \postDens(\CovObs|\bpar, \stateMat) &\propto -\sum_{\outidx = 1}^{\Nout} \left[\left(\alpha_{\outidx} + \Ntime_{\outidx}/2 + 1 \right)\log(\sdOut_{\outidx}^2) + \frac{\beta_{\outidx} + 
+								  \SSROut{\outidx}(\bpar)/2}{2} \right] \\
+				      			       &\propto \sum_{\outidx = 1}^{\Nout} \log \mathcal{IG}\left(\sdOut_{\outidx}^2|\alpha_{\outidx} + \Ntime_{\outidx}/2, \beta_{\outidx} + \SSROut{\outidx}(\bpar)/2 \right)
+\end{align*}
+That is, 
+\begin{align}
+\sdOut_{\outidx}^2|\bpar, \stateMat &\overset{\text{ind}}{\sim} \mathcal{IG}\left(\sdOut_{\outidx}^2|\alpha_{\outidx} + \Ntime_{\outidx}/2, \beta_{\outidx} + \SSROut{\outidx}(\bpar)/2 \right) \label{cond_post_Cov}
 \end{align}
 
+The Metropolis-within-Gibbs procedure is outlined below. 
 
+ \begin{algorithm}[H]
+	\SetAlgoLined
+	
+	\textbf{Require}: Initial parameter values $\bpar^{(0)}, \CovObs^{(0)}$ \\
+	\textbf{Require}: Number iterations $\NMCMC$ \\
+	\textbf{Require}: Proposal Covariance $\CovProp$
+		
+	\bigskip
+	
+	\For{$t = 1, \dots, \NMCMC$} {
+	\textit{MH step, sample $\bpar$}: \\[.2cm]
+	Sample $\bpar^\prime \sim \mathcal{N}_{\Npar}(\bpar^{(t - 1)}, \CovProp)$ \\
+	$\alpha(\bpar^{(t - 1)}, \bpar^\prime) := \min\left\{1, \frac{\postDens(\bpar^\prime|\stateMat, \CovObs^{(t-1)})}{\postDens(\bpar^{(t-1)}|\stateMat, \CovObs^{(t-1)})} \right\}$ \\
 
-
-To measure error between model 
-predictions $\fwd(\bpar)$ and observed data $Y$, we assume the following Gaussian noise model. 
-\begin{align*}
-\llik(\bpar) := \log p(Y|\mathbf{\bpar}) = \sum_{p = 1}^{P} \sum_{\timeidx = 1}^{\Ntime_{\outidx}} \log \mathcal{N}\left(y_{tp}| G_{tp}(\bpar), \sigma_p^2 \right)
-\end{align*}
-This likelihood assumes the errors are independent across time and output variable. Note that $\llik(\bpar)$ depends on $Y$, but $Y$ is constant throughout the analysis so we drop it from the notation. Missing 
-observations are simply ignored, hence the product from $\timeidx = 1, \dots, \Ntime_{\outidx}$ for each output $p$.
-
-For notational convenience, we collect the variance parameters in the matrix $\Sigma := \text{diag}\left(\sigma_1^2, \dots, \sigma_P^2 \right)$. 
-We denote the priors on the calibration and variance parameters as  $\priorDens(\bpar, \Sigma) = \priorDens(\bpar)\priorDens(\Sigma)$, assuming prior independence.  
-The variances $\sigma_p^2$ are assigned inverse gamma priors $\sigma_p^2 \overset{ind}{\sim} \mathcal{IG}(\alpha_p, \beta_p)$ so that 
-\[\priorDens(\Sigma) = \prod_{p = 1}^{P} \mathcal{IG}(\sigma_p^2|\alpha_p, \beta_p)\]
-Combining these priors with the likelihood yields the posterior 
-\[\postDens(\bpar, \Sigma) := p(\bpar, \sigma_1^2, \dots, \sigma_P^2|Y) \propto e^{\llik(\bpar)}\priorDens(\bpar, \Sigma)\]
-
+	 Sample $U \sim \mathcal{U}[0, 1]$ \\
+	 \If{$U < \alpha(\bpar^{(t - 1)}, \bpar^\prime)$} {
+	 	$\bpar^{(t)} := \bpar^\prime$ \\
+	 } \Else {
+		$\bpar^{(t)} := \bpar^{(t - 1)}$ \\
+	 }
+	
+	\bigskip
+	
+	\textit{Gibbs step, sample $\CovObs$}: \\[.2cm]
+	Sample $\CovObs \sim  \postDens(\CovObs | \stateMat, \bpar^{(t)})$
+}
+\caption{MCMC algorithm: approximately sample $\postDens(\bpar, \CovObs|\stateMat)$}
+\end{algorithm}
+We note that in practice the proposal covariance $\CovProp$ is typically adaptively tuned; see Haario et al (1999, 2001).  
 
 % Emulator-Based Calibration for Dynamic Models
 \section{Emulator-Based Calibration for Dynamic Models}
 
+% Basis functions
 \subsection{Basis Functions}
 
+% Likelihood and loss emulation
 \subsection{Likelihood and Loss Emulation}
 \textbf{TODO: better to introduce all the GP notation in the $P = 1$ case to avoid all the superscripts. Then generalize later.}
 
@@ -203,6 +282,16 @@ Here we have defined
 \SSRVecPredOut{\Ndesign}{\outidx} &:= \begin{pmatrix} \SSRPredOut{1}{\outidx}, \dots, \SSRPredOut{\Ndesign}{\outidx} \end{pmatrix}^{\top}
 \end{align}
 
+% Induced Posterior Density Approximation
+\subsection{Induced Posterior Density Approximation}
+Regardless of whether one directly approximates the forward model, the likelihood, or a sufficient statistic of the likelihood, ultimately the emulator induces an approximation to the posterior 
+density $\postDens(\bpar, \CovObs|\stateMat)$. In the case of Gaussian process emulators, this is a \textit{stochastic} approximation, since the GP distribution of the emulator induces 
+a (potentially non-Gaussian) probability distribution over $\postDens(\bpar, \CovObs|\stateMat)$. In the case of loss emulation, recall that $\SSRPred{\designidx}(\bpar)$ denotes the random 
+variable with distribution given by the GP conditioned on the first $n$ design points and evaluated at input $\btheta$. We extend this notation, writing $\llik_{\designidx}(\bpar)$ and 
+$\log \postDens_{\designidx}(\bpar)$ to denote, respectively, the random approximation to the log-likelihood and log-posterior induced by the emulator (e.g. $\Phi_n(\btheta)$). The distribution of 
+these induced approximations will be important when considering sequential design criterions in the next section.  
+
+
 \subsection{Statistical Setting}
 We denote the vector of calibration parameters by $\bpar \in \parspace \subset \R^{\Npar}$. The forward model (e.g. SIPNET or ED2) $\fwd(\bpar)$ maps calibration parameters to the model outputs. Note that the forward 
 model also depends on initial conditions and model drivers, but these are fixed throughout the analysis so are suppressed in the notation. Model outputs consist 
@@ -210,24 +299,25 @@ of $T$ time steps for each of $P$ output variables, so $\fwd(\bpar) \in \mathbb{
 of non-missing observations of output variable $p$. We index the observations of output $p$ as $\{y_{tp}\}_{\timeidx = 1}^{\Ntime_{\outidx}}$, meaning that $Y$ is then technically a ragged matrix. 
 This is suitable for the model detailed below, as the ordering of the observations is inconsequential. 
 
-\subsubsection{Conditional Posteriors}
 
-\bigskip
-\noindent
-\textbf{$\bpar$ conditional.}
+% Sequential Design 
+\section{Sequential Design}
 
-\bigskip
-\noindent
-\textbf{$\Sigma$ conditional.}
-The log posterior of $\Sigma$ given $\bpar$ is given by 
-\begin{align*}
-\log p(\Sigma|\bpar, Y) &\propto -\sum_{p = 1}^{P} \left[\left(a_p + \Ntime_{\outidx}/2 + 1 \right)\log(\sigma_p^2) + \frac{b_p + \Phi_p(\bpar)/2}{2} \right] \\
-				      &\propto \sum_{p = 1}^{P} \mathcal{IG}\left(\sigma_p^2|a_p + \Ntime_{\outidx}/2, b_p + \Phi_p(\bpar)/2 \right)
-\end{align*}
-That is, 
-\begin{align*}
-\sigma_p^2|\bpar, Y \overset{ind}{\sim} \mathcal{IG}\left(\sigma_p^2|a_p + \Ntime_{\outidx}/2, b_p + \Phi_p(\bpar)/2 \right)
-\end{align*}
+\subsection{Basics of Sequential Design and Bayesian Optimization}
+
+\subsection{Batch Sequential Design}
+
+\subsection{Unknown $\CovObs$}
+The above algorithms have treated $\CovObs$ as fixed; here we return to the general setting where $\CovObs$ is unknown. To deal with this, we consider inserting an 
+optimization step into algorithm \textbf{TODO: need to add algorithm above} after each batch $\btheta$ run:
+\begin{align}
+\CovObs_{\designidx} &:= \argmax_{\CovObs} \postDens(\CovObs|\stateMat, \currParMax{\designidx}) \label{Cov_optimization}
+\end{align}
+Recalling from \ref{cond_post_Cov} that $\postDens(\CovObs|\stateMat, \currParMax{\designidx})$ is a product of inverse gamma densities, the optimum $\CovObs_{\designidx}$ can 
+be computed in closed form (see appendix). The optimal variances occupying the diagonal of $\CovObs_{\designidx}$ are given by 
+\begin{align}
+\sdOut_{\outidx}^2 &= \frac{\SSROut{\outidx}(\currParMax{\designidx})/2 + \beta_{\outidx}}{\NTimeOut{\outidx}/2 + \alpha_{\outidx} + 1}
+\end{align}
 
 % Surrogate Modeling
 \section{Surrogate Modeling}
@@ -251,273 +341,38 @@ A more accurate high-level view of the current algorithm is thus given by
 \item $\Sigma \sim p(\Sigma|\bpar, \Phi^*(\bpar), Y)$
 \end{itemize}
 
-\subsubsection{Conditional Posteriors}
+% Appendix 
+\section{Appendix}
 
-\subsection{Loss Emulation}
-Every iteration of MCMC requires evaluation of the forward model $G(\bpar)$. If this evaluation is costly, then this will render MCMC computationally intractable. To address this, we employ a surrogate modeling approach. 
-The forward model $G(\bpar)$ is replaced by an an approximation $\hat{G}(\bpar)$ known as an \textit{emulator}. Assuming $\hat{G}(\bpar)$ is much faster to evaluate then we substitute it for the exact model and thus 
-sample from the approximate posterior
- \[\hat{\postDens}(\bpar, \Sigma) \propto \hat{\llik}(\bpar)\postDens(\bpar)p(\Sigma)\]
- where 
- \begin{align*}
-\hat{\llik}(\theta) = \prod_{p = 1}^{P} \prod_{\timeidx = 1}^{\Ntime_{\outidx}} \mathcal{N}\left(y_{tp}| \hat{G}_{tp}(\bpar), \sigma_p^2 \right)
-\end{align*}
- 
-\subsubsection{Emulator Details}
-\begin{enumerate}
-\item \textbf{Problem}: The model output $G(\bpar)$ has dimension $\Ntime \times \Nout$. For any reasonable number of time steps $T$, the high-dimensionality of the output renders the problem of directly emulating $G$ intractable.  \\
-	\textbf{Solution}: One approach is to reduce the dimensionality of the output by representing it with respect to a basis, and then instead emulate the mapping from $\bpar$ to the basis coefficients. We consider an alternative 
-	of instead directly emulating the loss between the forward model and observed data. 
-	
-\item \textbf{Problem}: Issues with emulating the $\Phi_p$: non-linear, need to account for uncertainty in approximation. \\
-\textbf{Solution}: GP emulators. \\
-I need to write out this section, but to establish notation I briefly note that I will write $\Phi_p^*$ to denote the posterior/predictive distribution; i.e. the random field approximation of $\Phi_p$. I intentionally refrain from calling 
-this the predictive \textit{GP} since technically this could be a rectified or truncated Gaussian, or sometimes a Student-t process. This induces a random field approximation of the likelihood, which I similarly write as 
-$\llik^*$, noting that the randomness in $\llik^*$ comes from $\Phi^*_1, \dots, \Phi^*_P$. 
-	
-\end{enumerate}
-
-\subsubsection{Emulator-based MCMC inference}
-
+\subsection{Conditional Posterior Computations: $\postDens(\bpar|\stateMat, \CovObs)$, $\postDens(\CovObs|\stateMat, \bpar)$}
+\textbf{TODO}
 
 \subsection{Sequential Design}
-\begin{enumerate}
-\item \textbf{Problem}: While space-filling designs (e.g. via LHS or maximin) are common, they can be very inefficient in the Bayesian inverse problem setting. If the posterior distribution is concentrated in a small 
-subset of the parameter space, then space-filling designs will yield many design points in regions that are not of interest, while simultaneously under-sampling the region of significance.  \\
-	\textbf{Solution}: Sequential design approach that takes into account knowledge of the posterior as it proceeds. 
-	
-\subsection{Other things?}
-\begin{itemize}
-\item Scaling factors for PFTs. 
-\item Imbalanced data constraints. 
-\end{itemize}
-	
-\end{enumerate}
-
-\subsection{Sequential Design}
-
-\subsubsection{Notation and Background}
-Throughout this section I let $\mathcal{D}_n := \{[\bpar_1, \Phi(\bpar_1)], \dots, [\bpar_n, \Phi(\bpar_n)]\}$ denote the set of current (observed) design points and corresponding outputs. 
-The sequential design task is that of choosing the 
-next design point $\bpar_{n+1}$. For a GP $\Phi^*$, I let
-\[k_{\mathcal{D}_{n}}(\bpar) = \Var(\Phi^*(\bpar)|\mathcal{D}_{n})\]
-denote the predictive variance of the GP $\Phi^*$, which has been conditioned on data $\mathcal{D}_n$. Up to this point, I have been using $k^*(\bpar)$ to denote the predictive GP variance 
-at the input $\bpar$, where the asterisk differentiates the predictive (i.e. conditioned on $\mathcal{D}_n$) GP distribution from the GP prior. This notation did not make explicit the data being 
-conditioned on. However, in this experimental design context the emphasis is on design points so the notation $k_{\mathcal{D}_{n}}(\bpar)$ will prove more useful. 
-In the below notes, we will often be considering the merits of adding a new particular design point $\bpar_{n + 1}$. I denote by 
-\[k_{\mathcal{D}_{n+1}}(\bpar) = \Var(\Phi^*(\bpar)|\mathcal{D}_{n+1}) = \Var(\Phi^*(\bpar)|\mathcal{D}_{n}, [\bpar_{n+1}, \Phi(\bpar_{n+1})])\]
-the predictive variance at $\bpar$ for the GP that has also been conditioned on the new observation $[\bpar_{n+1}, \Phi(\bpar_{n+1})]$. Conveniently, the GP predictive 
-variance is not a function of the observed output $\Phi(\bpar_{n+1})$, so the above expression for the variance could just as well be written as conditioning only on 
-$\bpar_{n+1}$, rather than $[\bpar_{n+1}, \Phi(\bpar_{n+1})]$. 
-
-A commonly used acquisition function for choosing $\bpar_{n+1}$ is the \textit{integrated mean squared prediction error} (IMSPE). 
+\subsubsection{Optimizing $\postDens(\CovObs|\stateMat, \bpar)$}
+Here we derive the solution to the optimization problem \ref{Cov_optimization}. We recall from \ref{cond_post_Cov} that 
 \begin{align*}
-J(\bpar_{n+1}) = \int_{\parspace} k_{\mathcal{D}_{n+1}}(\bpar) \rho(\bpar) d\bpar = \E_{\bpar \sim \rho} \left[k_{\mathcal{D}_{n+1}}(\bpar) \right]
+\log \postDens(\CovObs|\stateMat, \bpar) &= \sum_{\outidx = 1}^{\Nout} \log \mathcal{IG}\left(\sdOut_{\outidx}^2|\alpha_{\outidx} + \Ntime_{\outidx}/2, \beta_{\outidx} + \SSROut{\outidx}(\bpar)/2 \right)
 \end{align*}
-where $\rho$ is some density on the input space $\parspace$. The next design point is selected by solving 
-\[\bpar_{n + 1} := \text{argmin}_{\tilde{\bpar}_{n+1} \in \parspace} J(\tilde{\bpar}_{n+1}) \]
-The IMSPE is intuitive in that it seeks to select the point that reduces the overall uncertainty (integrated over the whole input space, weighted by $\rho$) as much as possible. 
-The expectation defining the IMSPE is in general not analytically tractable, but is available in closed-form in simple settings, such as when the input space is a 
-hyperrectangle and $\rho(\bpar) \equiv 1$. For our purposes, it is important to emphasize that $J(\bpar_{n+1})$ is a well-defined, non-random quantity due to the fact 
-that the GP predictive variance does not depend on the output $\Phi(\bpar_{n+1})$. If it did depend on this output, then $J(\bpar_{n+1})$ would be random since 
-$\Phi(\bpar_{n+1})$ is not yet known. 
-
-The tricky thing about our setting is that we often want to consider the random field approximations $L^*(\tilde{\bpar})$ and $\postDens^*(\tilde{\bpar})$ induced by the GP approximation 
-$\Phi^*(\tilde{\bpar})$. These random fields are no longer Gaussian, hence they do not have the convenient property that their predictive variances are independent of the observed 
-outputs. Therefore, defining an analog of IMSPE would require an additional integral averaging over the uncertainty in the model outputs. For example, 
+Thus, each term can be optimized independently. We have, 
 \begin{align*}
-J_{L}(\bpar_{n+1}) &= \E_{\Phi^*(\bpar_{n+1})} \E_{\bpar \sim \rho} \Var_{\Phi^*} \left(L^*(\bpar) | \mathcal{D}_{n+1} \right)
+\log \mathcal{IG}\left(\sdOut_{\outidx}^2|\alpha_{\outidx} + \Ntime_{\outidx}/2, \beta_{\outidx} + \SSROut{\outidx}(\bpar)/2 \right) &\propto -[\alpha_{\outidx} + \Ntime_{\outidx}/2 + 1]\log(\sdOut^2_{\outidx})
+																									       - \frac{1}{\sdOut^2_{\outidx}} [\beta_{\outidx} + \SSROut{\outidx}(\bpar)/2]
 \end{align*}
-Breaking this down, $\Var_{\Phi^*} \left(L^*(\bpar) | \mathcal{D}_{n+1} \right)$ is predictive variance at input $\bpar$ of the random field $L^*$. Note that this is conditioned on 
-$\mathcal{D}_{n+1}$, which includes the new (not-yet-observed) data point $[\bpar_{n+1}, \Phi(\bpar_{n+1})]$. $L^*$ is not Gaussian-distributed and hence this predictive variance
-does indeed depend on the unobserved output $\Phi(\bpar_{n+1})$. Therefore, the outer expectation $ \E_{\Phi^*(\bpar_{n+1})}$ integrates over the current 
-(conditional on $\mathcal{D}_n$) predictive GP distribution over $\Phi(\bpar_{n+1})$. The remaining expectation $\E_{\bpar \sim \rho}$ simply averages over the input 
-space as before, with $\rho$ allowing for the possibility of non-uniform weights. Although they do not motivate their proposed methods in this way, Sinsbeck and Nowak 
-\cite{doi:10.1137/15M1047659} essentially propose the use of $J_{L}(\bpar_{n+1})$ as an acquisition function for experimental design in Bayesian inverse problems. They 
-choose to weight by the prior when averaging over the input space (i.e., $\rho(\bpar) = \priorDens(\bpar)$). 
-
-\subsubsection{Sinsbeck and Nowak (2017)}
-Sinsbeck and Nowak \cite{doi:10.1137/15M1047659} propose a sequential design method which constructs and refines a deterministic approximation to the true likelihood $L(\bpar)$ at each iteration of the sequential design procedure. 
-This likelihood approximation is then used to construct an acquisition function that targets regions of high posterior density. I summarize their method here, with adjustments to tailor the method to our loss-emulation setting. 
-
-\bigskip
-\noindent
-\textbf{Motivation from Integrated Mean Squared Prediction Error.}
-The authors do not introduce their method in this way, but I find this motivation to be helpful. The \textit{integrated mean squared prediction error} (IMSPE) is a commonly-used acquisition function for 
-experimental design with GPs. 
-
-
-
-\bigskip
-\noindent
-\textbf{Deterministic likelihood approximation.}
-The first step is to construct the deterministic likelihood approximation $\hat{\llik}_n(\bpar)$ from 
-$\llik^*_n(\bpar)$, where the subscript $n$ indicates that both the random field approximation $\llik^*_n(\bpar)$ and deterministic approximation $\hat{\llik}_n(\bpar)$ have been constructed from the data 
-$\mathcal{D}_n = \left\{(\bpar_1, \llik(\bpar_1)), \dots, (\bpar_n, \llik(\bpar_n)) \right\}$. One option is to define $\hat{\llik}_n(\bpar)$ as the approximation resulting from plugging in the GP predictive 
-means. However, this fails to account for the uncertainty encoded by the GP predictive distribution. Sinsbeck and Nowak take a more principled approach, defining $\hat{\llik}_n(\bpar)$ as the approximation that minimizes 
-a certain loss criterion. The loss criterion of choice is the prior-weighted $L^2$ error:
-\[\ell(\llik, \llik^\prime) := \E_{\bpar}\left[\left(\llik(\bpar) - \llik^\prime(\bpar) \right)^2 \right]\]
-where the notation $\E_{\bpar}(\cdot)$ indicates integration with respect to the prior $\priorDens$. 
-However, in this setting the goal is to choose the $\hat{\llik}_n$ that minimizes error with respect to a \textit{random} approximation $\llik_n^*$. Thus, the error measure is defined as the 
-expectation of $\ell(\llik^*_n, \hat{\llik}_n)$ with respect to the GP $\Phi^*$. This yields the \textit{Bayes' risk}
-\[\mathcal{R}(\llik_n^*, \llik_n) := \E_{\Phi^*} \E_{\bpar} \left[\left(\llik^*(\bpar) - \llik(\bpar) \right)^2 \right] \]
-The deterministic approximation is taken as the minimizer  
-\[\hat{\llik}_n := \text{argmin}_{\llik_n} \mathcal{R}(\llik_n^*, \llik_n) \]
-which can be shown to be given by 
-\[\hat{\llik}_n(\bpar) = \E_{\Phi^*}\left[\llik_n^*(\bpar) \right]\]
-i.e. the approximation resulting from integrating the GP out of the random field $\llik_n^*(\bpar)$. Evaluated at the optimizer, the Bayes' risk reduces to the prior-weighted predictive variance 
-of $\llik_n^*(\bpar)$: 
-\begin{align}
-\hat{\mathcal{R}}(\llik_n^*) := \mathcal{R}(\llik_n^*, \hat{\llik}_n) = \E_{\bpar} \Var_{\Phi^*}\left[\llik_n^*(\bpar)\right] \label{Bayes_Risk}
-\end{align}
-The authors also consider a ``fully Bayesian'' likelihood estimation approach, which turns out to result in the same exact estimator. 
-
-\bigskip
-\noindent
-\textbf{Acquisition Function.}
-The authors propose a greedy one-step look ahead strategy. Intuitively, we assess the quality of a new design point $\tilde{\bpar}$ by considering the GP predictive distribution 
-at this proposed point $\tilde{\Phi} := \Phi(\tilde{\bpar})$. We use this predictive distribution to predict what the Bayes' risk \ref{Bayes_Risk} would be were we to observe 
-$(\tilde{\bpar}, \tilde{\Phi})$ and condition on this additional observation. Recall that $\hat{\mathcal{R}}(\llik_n^*)$ denotes the Bayes' risk between the 
-random field approximation and optimal deterministic approximation. I introduce the notation $\tilde{\llik}^*_n := \llik^*_n|\tilde{\bpar}, \tilde{\Phi}$ to denote the 
-random field likelihood approximation conditioned on $(\tilde{\bpar}, \tilde{\Phi})$. Note that the forward model has not yet been run at input parameter $\tilde{\bpar}$ so 
-$\tilde{\Phi}$ is itself a random variable. I utilize the same notation for the GP itself, so that $\tilde{\Phi}^*_n := \Phi^*_n|\tilde{\bpar}, \tilde{\Phi}$
-
-With this notation established, $\hat{\mathcal{R}}(\tilde{\llik}^*_n)$ is an estimator for the future Bayes' risk, were we 
-to run the forward model at $\tilde{\bpar}$. Unlike $\hat{\mathcal{R}}(\llik^*_n)$, $\hat{\mathcal{R}}(\tilde{\llik}^*_n)$ is a random quantity due to the fact that 
-we have not run the model at $\tilde{\bpar}$ and thus $\tilde{\Phi}$ is unknown. In order to define a deterministic acquisition function, we must now integrate over the distribution of $\tilde{\Phi}$, in addition to the two other 
-integrals in the original definition of the Bayes' risk. This yields the acquisition function, 
-\begin{align}
-J_n(\tilde{\bpar}) &:=  \E_{\tilde{\Phi}} \hat{\mathcal{R}}(\tilde{\llik}^*_n) \\ 
-			     &= \E_{\tilde{\Phi}} \E_{\bpar} \Var_{\tilde{\Phi}_n^*}\left[\tilde{\llik}_n^*(\bpar) \right]
-\end{align}
-Note that the acquisition function is a function of $\tilde{\bpar}$, a new design point; not to be confused with the $\bpar$ in the second line above, which is averaged over by 
-$\E_{\bpar}(\cdot)$. 
-
-This is the final acquisition function considered in the paper. However, in our case the likelihood parameters $\Sigma$ are not known. We could consider augmenting to include these 
-parameters and integrate over the prior on the likelihood parameters as well: 
-\begin{align}
-J_n(\tilde{\bpar}) &:= \E_{\tilde{\Phi}} \E_{\Sigma} \E_{\bpar} \Var_{\tilde{\Phi}_n^*}\left[\tilde{\llik}_n^*(\bpar, \Sigma) \right]
-\end{align}
-
-\bigskip
-\noindent
-\textbf{Approximating the Acquisition Function.} \\
-I now consider approximation of the above acquisition function. For simplicity, I drop the dependence on $\Sigma$ for now (we can think of $\bpar$ as containing both the 
-calibration and likelihood parameters). I also suppose that the GP predictive distribution is Gaussian for now. First, recall that 
+so 
 \begin{align*}
-\tilde{L}_n^*(\bpar) &= \exp\left\{ -\frac{1}{2} \sum_{p = 1}^{P} \left[\Ntime_{\outidx} \log\left(2\postDens \sigma_p^2\right) + \frac{\tilde{\Phi}^*_p(\bpar)}{\sigma_p^2}\right] \right\} \\
-				&= C_{\Sigma} \prod_{p = 1}^{P} \exp\left\{\frac{\tilde{\Phi}^*_p(\bpar)}{2\sigma_p^2}\right\}
+\frac{d}{d\sdOut_{\outidx}^2}\left[\log \mathcal{IG}\left(\sdOut_{\outidx}^2|\alpha_{\outidx} + \Ntime_{\outidx}/2, \beta_{\outidx} + \SSROut{\outidx}(\bpar)/2 \right)\right] &= -\frac{1}{\sdOut_{\outidx}^2}[\alpha_{\outidx} + \Ntime_{\outidx}/2 + 1] + \frac{1}{\sdOut_{\outidx}^4} [\beta_{\outidx} + \SSROut{\outidx}(\bpar)/2]
 \end{align*}
-Recalling the GP predictive distribution, we have 
-\[\frac{\tilde{\Phi}^*_p(\bpar)}{2\sigma_p^2}\bigg|\theta, \tilde{\Phi} \sim \mathcal{N}\left(\frac{\tilde{\mu}_p^*(\bpar)}{2\sigma_p^2}, \frac{\tilde{k}_p^*(\bpar)}{4\sigma_p^4} \right) \]
-Note that the predictive mean $\tilde{\mu}_p^*(\bpar)$ and variance $\tilde{k}_p^*(\bpar)$ are not known, since these are the predictive quantities given that the GP has been 
-conditioned on $\tilde{\Phi}$. 
-The exponential of the above quantity is log-normally distributed
-\[\exp\left\{\frac{\tilde{\Phi}^*_p(\bpar)}{2\sigma_p^2}\right\}\bigg|\theta, \tilde{\Phi} \sim \mathcal{LN}\left(\frac{\tilde{\mu}_p^*(\bpar)}{2\sigma_p^2}, \frac{\tilde{k}_p^*(\bpar)}{4\sigma_p^4} \right) \]
-so the expectation is available in closed-form:
-\[\E_{\tilde{\Phi}_p^*} \exp\left\{\frac{\tilde{\Phi}^*_p(\bpar)}{2\sigma_p^2}\right\} = \exp\left\{\frac{\tilde{\mu}_p^*(\bpar)}{2\sigma_p^2} + \frac{\tilde{k}_p^*(\bpar)}{8\sigma_p^4} \right\} \]
-Since the univariate GPs are independent, we obtain 
+Setting the derivative equal to zero and solving for $\sdOut^2_{\outidx}$ yields
 \begin{align*}
-\E_{\tilde{\Phi}^*} \tilde{L}_n^*(\bpar) &= C_\Sigma \prod_{p = 1}^{P} \E_{\tilde{\Phi}_p^*} \exp\left\{\frac{\tilde{\Phi}^*_p(\bpar)}{2\sigma_p^2}\right\} \\
-							   &= C_\Sigma \exp\left\{\sum_{p = 1}^{P} \left[ \frac{\tilde{\mu}_p^*(\bpar)}{2\sigma_p^2} + \frac{\tilde{k}_p^*(\bpar)}{8\sigma_p^4} \right] \right\}
+\sdOut_{\outidx}^2 &= \frac{\SSROut{\outidx}(\bpar)/2 + \beta_{\outidx}}{\NTimeOut{\outidx}/2 + \alpha_{\outidx} + 1}
 \end{align*}
 
-\subsection{Bayesian Optimization to find MAP Estimate}
-Numerical examples with VSEM have shown that it is common for the posterior to be highly concentrated relative to the prior. Loosely speaking, the region of 
-non-negligible posterior mass sometimes looks like a tiny point in the input space. Space-filling or sequential design schemes may completely miss this region 
-of interest. Therefore, one approach is to first optimize, finding the MAP estimate to locate the general region of interest, and then proceed with a sequential 
-design scheme from there. Ideally, we seek 
-\begin{align*}
-\bpar_{\text{MAP}}, \Sigma_{\text{MAP}} = \text{argmax}_{\bpar, \Sigma} \postDens(\bpar, \Sigma)
-\end{align*}
-Note that we are currently considering optimizing with respect to both the calibration parameters $\bpar$ and likelihood parameters $\Sigma$. 
-Function evaluations $\postDens(\bpar, \Sigma)$ are expensive due to the fact that evaluating at a new value of $\bpar$ requires running the forward 
-model. However, for a fixed value of $\bpar$, evaluations at different values of $\Sigma$ is significantly cheaper. We therefore might consider 
-a coordinate ascent type algorithm, where $\bpar$ updates are given by a Bayesian optimization (BO) step, and $\Sigma$ updates by a traditional 
-optimization. We begin by considering the former, where $\Sigma$ is assumed fixed. Throughout these optimization notes, I will use the notation 
-\[\postDens_n^{\max} := \max\left\{\postDens(\bpar_1, \Sigma_1), \dots, \postDens(\bpar_n, \Sigma_n) \right\}\]
-where $\left\{(\bpar_i, \Sigma_i) \right\}_{i = 1}^{n}$ are the inputs associated with the currently observed outputs. 
 
-\subsubsection{BO $\bpar$ update}
-The BO $\bpar$ update is accomplished via the minimization of an acquisition function $\alpha(\bpar)$. 
-\[\bpar_{n+1} := \text{argmax}_{\bpar \in \parspace} \alpha(\bpar) \]
-I first consider the expected improvement (EI) acquisition function, which in 
-this context looks like: 
-\begin{align*}
-\alpha_{\text{EI}}(\bpar) &= \mathbbm{E}\left[\max\left\{0, \postDens_n^*(\bpar) - \postDens_n^{\max} \right\} \right]
-\end{align*}
-This expectation is available in closed-form when the distribution of $\postDens_n^*(\bpar)$ is Gaussian. However, in this case the distribution is not Gaussian so 
-we must resort to approximation. Consider a Monte Carlo approximation 
-\begin{align*}
-\alpha_{\text{EI}}(\bpar) &\approx \frac{1}{T} \sum_{\timeidx = 1}^{T} \max\left\{0, \postDens^{(t)}_n(\bpar) - \postDens_n^{\max}\right\}, \text{ where } \postDens^{(t)}_n(\bpar) \overset{iid}{\sim} \postDens_n^*(\bpar)
-\end{align*}
+\subsubsection{EIVAR Acquisition Computations}
 
-\subsection{Minimizing $L^2$ error between log-likelihoods weighted by approximate posterior}
-Building on the Sinsbeck and Nowak approach, here are a few things to consider modifying. 
-\begin{enumerate}
-\item Instead of weighting by the prior ($\rho(\bpar) = \priorDens(\bpar)$) instead weight by the approximate posterior $\postDens^*(\bpar)$. 
-\item Instead of minimizing error between likelihoods, minimize error between log-likelihoods. Or between log-posteriors. 
-\end{enumerate}
 
-Proceeding as in Sinsbeck and Nowak with these added modifications, I first define a loss function. 
-\begin{align*}
-\ell(f, g) := \E_{\bpar \sim \postDens} \left[\left(f(\bpar) - g(\bpar) \right)^2 \right]
-\end{align*}
-This is a posterior-weighted $L^2$ error between the functions $f$ and $g$. In our case, $f$ and $g$ will be log-likelihoods. Since we are working with 
-$\llik_n^*$, a random field approximation of the log-likelihood, we consider additionally integrating over the uncertainty in $\llik_n^*$. This 
-yields the Bayes' risk 
-\begin{align*}
-\mathcal{R}_n(\tilde{\llik}_n) := \E_{\bpar \sim \postDens} \E_{\llik_n^*}\left[\left(\llik_n^*(\bpar) - \tilde{\llik}_n(\bpar) \right)^2 \right]
-\end{align*}
-where $\tilde{\llik}_n(\bpar)$ is some deterministic approximation to the likelihood, derived only using $\mathcal{D}_n$. The best deterministic approximation 
-according to the Bayes' risk is given by 
-\begin{align*}
-\hat{\llik}_n &= \text{argmin}_{\tilde{\llik}_n} \E_{\bpar \sim \postDens} \E_{\llik_n^*}\left[\left(\llik_n^*(\bpar) - \tilde{\llik}_n(\bpar) \right)^2 \right]
-\end{align*}
-The inner expectation is minimized pointwise by $\tilde{\llik}_n(\bpar) = \E_{\llik_n^*}\left[\llik_n^*(\bpar) \right]$. Plugging in this minimizer, the Bayes' 
-risk becomes, 
-\begin{align*}
-\mathcal{R}_n(\hat{\llik}_n) &=  \E_{\bpar \sim \postDens} \E_{\llik_n^*}\left[\left(\llik_n^*(\bpar) - \E_{\llik_n^*}\left[\llik^*_n(\bpar)\right] \right)^2 \right] \\
-						      &= \E_{\bpar \sim \postDens} \Var_{\llik_n^*}\left[\llik_n^*(\bpar) \right]
-\end{align*}
-which is the posterior-weighted predictive variance of $\llik_n^*$. The design criterion is then defined as a one-step lookahead version of the Bayes' risk; i.e. we seek to 
-choose $\bpar_{n+1}$ such that conditioning $\llik_n^*$ on the new observation $\left(\bpar_{n+1}, \llik_{n+1} \right)$ 
-(where $\llik_{n+1} := \llik(\bpar_{n+1})$) would yield the largest reduction in Bayes' risk. This is essentially applying the Active Learning Cohn (ALC) 
-sequential design criterion to $\llik_n^*$. There are two potential difficulties here: 
-\begin{enumerate}
-\item If $\llik_n^*$ is not Gaussian, then the predictive variance $\Var_{\llik_n^*}\left[\llik_n^*(\bpar) \right]$ in general depends on the 
-response values $\llik_1, \dots, \llik_n$. Thus, computation of the predictive variance at $\bpar$ given hypothetical observation of 
-$\left(\bpar_{n+1}, \llik_{n+1} \right)$ requires averaging over $\llik_{n+1}$. This is in contrast to a GP, which has a predictive variance independent of 
-the response data. 
-\item The outer expectation requires integrating over the true posterior $\postDens$, which is unknown. We instead consider replacing $\postDens$ with an approximation constructed 
-using $\llik_n^*$. Sinsbeck and Nowak instead consider integrating with respect to the known 
-prior $\priorDens$. In either case, generally there is no closed-form solution to this outer integral. 
-\end{enumerate}
-In general, the acquisition function is given by 
-\begin{align}
-J(\bpar_{n+1}) := \E_{\bpar \sim \rho} \E_{\llik_{n+1}} \Var\left[\llik^*(\bpar) | \mathcal{D}_{n+1} \right] \label{acquisition}
-\end{align}
-where $\mathcal{D}_{n+1} = \mathcal{D}_{n} \cup \left(\bpar_{n+1}, \llik_{n+1} \right)$. I leave $\rho$ generic for now, but we can think of this as either 
-$\priorDens$, $\postDens$ (in the idealized case), or some approximation to $\postDens$. 
 
-\subsubsection{Case 1: Gaussian predictive distribution}
-Here I suppose that the $\Phi_p^*$ have Gaussian distributions. This simplifies matters by yielding a closed-form solution for the predictive variance in \ref{acquisition}. Moreover, 
-this predictive variance is independent of $\llik_{n+1}$, thus eliminating the expectation $\E_{\llik_{n+1}}$. We first recall that the log-likelihood has the form 
-\begin{align*}
-\llik(\bpar) &= C_\Sigma - \frac{1}{2} \sum_{p = 1}^{P} \frac{\Phi_p(\bpar)}{\sigma_p^2}
-\end{align*} 
-Under the assumption of Gaussian predictive distributions, we then have 
-\begin{align*}
-\llik^*(\bpar) &\sim \mathcal{N}\left(C_\Sigma - \frac{1}{2} \sum_{p = 1}^{P} \frac{\mu^*_p(\bpar)}{\sigma_p^2}, \frac{1}{4} \sum_{p = 1}^{P} \frac{k^*_p(\bpar)}{\sigma_p^4}  \right)
-\end{align*}
-I denote the above variance by $\Var\left[\llik^*(\bpar) | \mathcal{D}_n \right]$ to make explicit the dependence on the data $\mathcal{D}_n$. In this setting, 
-$\Var\left[\llik^*(\bpar) | \mathcal{D}_n \right]$ does not depend on $\llik_1, \dots, \llik_n$. In particular, $\Var\left[\llik^*(\bpar) | \mathcal{D}_{n+1} \right]$
-does not depend on $\llik_{n+1}$, which eliminates the expectation $\E_{\llik_{n+1}}$ in \ref{acquisition}. 
-Thus, the acquisition function simplifies to 
-\begin{align}
-J(\bpar_{n+1}) := \E_{\bpar \sim \rho} \Var\left[\llik^*(\bpar) | \mathcal{D}_{n+1} \right] \label{acquisition_Gaussian_case}
-\end{align}
-where the inner variance can be computed explicitly. 
+
 
 \end{document}
 
