--- a/local-defs.tex
+++ b/local-defs.tex
@@ -43,7 +43,8 @@
 \newcommand{\designidx}{n} % Primary index for design points (sequential design)
 \newcommand{\batchidx}{b}  % Primary index for rounds in sequential batch design
 \newcommand{\currParMax}[1]{\bpar_{#1}^{\text{max}}} % Value of design point (calibration parameter) that currently has highest posterior density
-  \newcommand{\currMax}[1]{\postDens_{#1}^{\text{max}}} % Current max value of posterior density
+\newcommand{\currMax}[1]{\postDens_{#1}^{\text{max}}} % Current max value of posterior density
+\newcommand{\acq}[1]{\mathcal{A}_{#1}} % Acquisition function
 
 % Gaussian Processes (GPs)
 \newcommand{\GP}{\mathcal{GP}} % GP distribution 
